@@ -1,11 +1,11 @@
 /*
- * Copyright 2002-2019 the original author or authors.
+ * Copyright 2002-present the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      http://www.apache.org/licenses/LICENSE-2.0
+ *      https://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -25,26 +25,37 @@ import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Properties;
+import java.util.Set;
+import java.util.stream.Collectors;
 
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
+import org.jspecify.annotations.Nullable;
+import org.yaml.snakeyaml.DumperOptions;
 import org.yaml.snakeyaml.LoaderOptions;
 import org.yaml.snakeyaml.Yaml;
+import org.yaml.snakeyaml.composer.ComposerException;
+import org.yaml.snakeyaml.constructor.Constructor;
+import org.yaml.snakeyaml.inspector.TagInspector;
+import org.yaml.snakeyaml.nodes.Tag;
 import org.yaml.snakeyaml.reader.UnicodeReader;
+import org.yaml.snakeyaml.representer.Representer;
 
 import org.springframework.core.CollectionFactory;
 import org.springframework.core.io.Resource;
-import org.springframework.lang.Nullable;
 import org.springframework.util.Assert;
+import org.springframework.util.ObjectUtils;
 import org.springframework.util.StringUtils;
 
 /**
  * Base class for YAML factories.
  *
- * <p>Requires SnakeYAML 1.18 or higher, as of Spring Framework 5.0.6.
+ * <p>Requires SnakeYAML 2.0 or higher.
  *
  * @author Dave Syer
  * @author Juergen Hoeller
+ * @author Sam Brannen
+ * @author Brian Clozel
  * @since 4.1
  */
 public abstract class YamlProcessor {
@@ -59,35 +70,37 @@ public abstract class YamlProcessor {
 
 	private boolean matchDefault = true;
 
+	private Set<String> supportedTypes = Collections.emptySet();
+
 
 	/**
 	 * A map of document matchers allowing callers to selectively use only
 	 * some of the documents in a YAML resource. In YAML documents are
 	 * separated by {@code ---} lines, and each document is converted
-	 * to properties before the match is made. E.g.
+	 * to properties before the match is made. For example,
 	 * <pre class="code">
 	 * environment: dev
-	 * url: http://dev.bar.com
+	 * url: https://dev.bar.com
 	 * name: Developer Setup
 	 * ---
 	 * environment: prod
-	 * url:http://foo.bar.com
+	 * url:https://foo.bar.com
 	 * name: My Cool App
 	 * </pre>
 	 * when mapped with
 	 * <pre class="code">
-	 * setDocumentMatchers(properties ->
+	 * setDocumentMatchers(properties -&gt;
 	 *     ("prod".equals(properties.getProperty("environment")) ? MatchStatus.FOUND : MatchStatus.NOT_FOUND));
 	 * </pre>
 	 * would end up as
 	 * <pre class="code">
 	 * environment=prod
-	 * url=http://foo.bar.com
+	 * url=https://foo.bar.com
 	 * name=My Cool App
 	 * </pre>
 	 */
 	public void setDocumentMatchers(DocumentMatcher... matchers) {
-		this.documentMatchers = Arrays.asList(matchers);
+		this.documentMatchers = List.of(matchers);
 	}
 
 	/**
@@ -117,13 +130,35 @@ public abstract class YamlProcessor {
 		this.resources = resources;
 	}
 
+	/**
+	 * Set the supported types that can be loaded from YAML documents.
+	 * <p>If no supported types are configured, only Java standard classes
+	 * (as defined in {@link org.yaml.snakeyaml.constructor.SafeConstructor})
+	 * encountered in YAML documents will be supported.
+	 * If an unsupported type is encountered, a {@link ComposerException}
+	 * will be thrown when the corresponding YAML node is processed.
+	 * @param supportedTypes the supported types, or an empty array to clear the
+	 * supported types
+	 * @since 5.1.16
+	 * @see #createYaml()
+	 */
+	public void setSupportedTypes(Class<?>... supportedTypes) {
+		if (ObjectUtils.isEmpty(supportedTypes)) {
+			this.supportedTypes = Collections.emptySet();
+		}
+		else {
+			Assert.noNullElements(supportedTypes, "'supportedTypes' must not contain null elements");
+			this.supportedTypes = Arrays.stream(supportedTypes).map(Class::getName)
+					.collect(Collectors.toUnmodifiableSet());
+		}
+	}
 
 	/**
 	 * Provide an opportunity for subclasses to process the Yaml parsed from the supplied
 	 * resources. Each resource is parsed in turn and the documents inside checked against
 	 * the {@link #setDocumentMatchers(DocumentMatcher...) matchers}. If a document
 	 * matches it is passed into the callback, along with its representation as Properties.
-	 * Depending on the {@link #setResolutionMethod(ResolutionMethod)} not all of the
+	 * Depending on the {@link #setResolutionMethod(ResolutionMethod)} not all the
 	 * documents will be parsed.
 	 * @param callback a callback to delegate to once matching documents are found
 	 * @see #createYaml()
@@ -141,13 +176,21 @@ public abstract class YamlProcessor {
 	/**
 	 * Create the {@link Yaml} instance to use.
 	 * <p>The default implementation sets the "allowDuplicateKeys" flag to {@code false},
-	 * enabling built-in duplicate key handling in SnakeYAML 1.18+.
+	 * enabling built-in duplicate key handling.
+	 * <p>If custom {@linkplain #setSupportedTypes supported types} have been configured,
+	 * the default implementation creates a {@code Yaml} instance that filters out
+	 * unsupported types encountered in YAML documents.
+	 * If an unsupported type is encountered, a {@link ComposerException} will be
+	 * thrown when the node is processed.
 	 * @see LoaderOptions#setAllowDuplicateKeys(boolean)
 	 */
 	protected Yaml createYaml() {
-		LoaderOptions options = new LoaderOptions();
-		options.setAllowDuplicateKeys(false);
-		return new Yaml(options);
+		LoaderOptions loaderOptions = new LoaderOptions();
+		loaderOptions.setAllowDuplicateKeys(false);
+		loaderOptions.setTagInspector(new SupportedTagInspector());
+		DumperOptions dumperOptions = new DumperOptions();
+		return new Yaml(new Constructor(loaderOptions), new Representer(dumperOptions),
+				dumperOptions, loaderOptions);
 	}
 
 	private boolean process(MatchCallback callback, Yaml yaml, Resource resource) {
@@ -187,17 +230,16 @@ public abstract class YamlProcessor {
 		}
 	}
 
-	@SuppressWarnings("unchecked")
+	@SuppressWarnings({"rawtypes", "unchecked"})
 	private Map<String, Object> asMap(Object object) {
 		// YAML can have numbers as keys
 		Map<String, Object> result = new LinkedHashMap<>();
-		if (!(object instanceof Map)) {
+		if (!(object instanceof Map map)) {
 			// A document can be a text literal
 			result.put("document", object);
 			return result;
 		}
 
-		Map<Object, Object> map = (Map<Object, Object>) object;
 		map.forEach((key, value) -> {
 			if (value instanceof Map) {
 				value = asMap(value);
@@ -262,12 +304,37 @@ public abstract class YamlProcessor {
 	 * @since 4.1.3
 	 */
 	protected final Map<String, Object> getFlattenedMap(Map<String, Object> source) {
+		return getFlattenedMap(source, false, null);
+	}
+
+	/**
+	 * Return a flattened version of the given map, recursively following any nested Map
+	 * or Collection values. Entries from the resulting map retain the same order as the
+	 * source. When called with the Map from a {@link MatchCallback} the result will
+	 * contain the same values as the {@link MatchCallback} Properties.
+	 * @param source the source map
+	 * @param includeEmpty whether empty entries should be included in the result
+	 * @param emptyValue the value used to represent an empty entry &mdash; for
+	 * example, {@code null} or an empty {@code String}
+	 * @return a flattened map
+	 * @since 7.0.4
+	 */
+	protected final Map<String, Object> getFlattenedMap(Map<String, Object> source, boolean includeEmpty,
+			@Nullable Object emptyValue) {
+
 		Map<String, Object> result = new LinkedHashMap<>();
-		buildFlattenedMap(result, source, null);
+		buildFlattenedMap(result, source, null, includeEmpty, emptyValue);
 		return result;
 	}
 
-	private void buildFlattenedMap(Map<String, Object> result, Map<String, Object> source, @Nullable String path) {
+	@SuppressWarnings({"rawtypes", "unchecked"})
+	private void buildFlattenedMap(Map<String, Object> result, Map<String, Object> source, @Nullable String path,
+			boolean includeEmpty, @Nullable Object emptyValue) {
+
+		if (includeEmpty && source.isEmpty()) {
+			result.put(path, emptyValue);
+			return;
+		}
 		source.forEach((key, value) -> {
 			if (StringUtils.hasText(path)) {
 				if (key.startsWith("[")) {
@@ -280,16 +347,12 @@ public abstract class YamlProcessor {
 			if (value instanceof String) {
 				result.put(key, value);
 			}
-			else if (value instanceof Map) {
+			else if (value instanceof Map map) {
 				// Need a compound key
-				@SuppressWarnings("unchecked")
-				Map<String, Object> map = (Map<String, Object>) value;
-				buildFlattenedMap(result, map, key);
+				buildFlattenedMap(result, map, key, includeEmpty, emptyValue);
 			}
-			else if (value instanceof Collection) {
+			else if (value instanceof Collection collection) {
 				// Need a compound key
-				@SuppressWarnings("unchecked")
-				Collection<Object> collection = (Collection<Object>) value;
 				if (collection.isEmpty()) {
 					result.put(key, "");
 				}
@@ -297,12 +360,12 @@ public abstract class YamlProcessor {
 					int count = 0;
 					for (Object object : collection) {
 						buildFlattenedMap(result, Collections.singletonMap(
-								"[" + (count++) + "]", object), key);
+								"[" + (count++) + "]", object), key, includeEmpty, emptyValue);
 					}
 				}
 			}
 			else {
-				result.put(key, (value != null ? value : ""));
+				result.put(key, (value != null ? value : (includeEmpty ? emptyValue : "")));
 			}
 		});
 	}
@@ -311,6 +374,7 @@ public abstract class YamlProcessor {
 	/**
 	 * Callback interface used to process the YAML parsing results.
 	 */
+	@FunctionalInterface
 	public interface MatchCallback {
 
 		/**
@@ -327,6 +391,7 @@ public abstract class YamlProcessor {
 	/**
 	 * Strategy interface used to test if properties match.
 	 */
+	@FunctionalInterface
 	public interface DocumentMatcher {
 
 		/**
@@ -386,6 +451,14 @@ public abstract class YamlProcessor {
 		 * Take the first resource in the list that exists and use just that.
 		 */
 		FIRST_FOUND
+	}
+
+	private class SupportedTagInspector implements TagInspector {
+
+		@Override
+		public boolean isGlobalTagAllowed(Tag tag) {
+			return supportedTypes.contains(tag.getClassName());
+		}
 	}
 
 }
